--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,3 +20,4 @@ add_subdirectory_ifdef(CONFIG_NET_L2_OPENTHREAD       openthread)
 add_subdirectory_ifdef(CONFIG_NRF_RPC                 nrf_rpc)
 add_subdirectory_ifdef(CONFIG_ZIGBEE                  zboss)
 add_subdirectory_ifdef(CONFIG_NRF_802154_SL           nrf_802154_sl)
+add_subdirectory_ifdef(CONFIG_NRF_802154_SL_SIMPLE    nrf_802154_sl)
